crates/validator_derive_impl/src/snapshots/validator_derive_impl__test__struct_validator.snap
---
source: crates/validator_derive_impl/src/test.rs
expression: formatted
---
#[derive(Debug)]
struct SignupDataValidationErrors {
    mail: Option<::validator::InvalidEmailError>,
    site: Option<::validator::InvalidUrlError>,
    first_name: Option<::validator::InvalidLengthError>,
}
struct SignupDataValidator {
    mail: ::validator::EmailValidator,
    site: ::validator::UrlValidator,
    first_name: ::validator::LengthValidator,
}
impl ::validator::Validator<SignupData> for SignupDataValidator {
    type Error = SignupDataValidationErrors;
    fn validate(
        &self,
        SignupData { mail, site, first_name }: &SignupData,
    ) -> Result<(), Self::Error> {
        let mut _valid = true;
        let validator = self;
        let error = SignupDataValidationErrors {
            mail: {
                match validator.mail.validate(mail) {
                    Ok(()) => None,
                    Err(error) => {
                        _valid = false;
                        Some(error)
                    }
                }
            },
            site: {
                match validator.site.validate(site) {
                    Ok(()) => None,
                    Err(error) => {
                        _valid = false;
                        Some(error)
                    }
                }
            },
            first_name: {
                match validator.first_name.validate(first_name) {
                    Ok(()) => None,
                    Err(error) => {
                        _valid = false;
                        Some(error)
                    }
                }
            },
        };
        if _valid { Ok(()) } else { Err(error) }
    }
}
impl ::validator::Validate for SignupData {
    type Validator = SignupDataValidator;
    fn validator() -> Self::Validator {
        SignupDataValidator {
            mail: ::validator::EmailValidator,
            site: ::validator::UrlValidator,
            first_name: ::validator::LengthValidator::new(Some(1usize), None),
        }
    }
}
